syntax = "proto3";
package chadbot;
option go_package = "github.com/fipso/chadbot/gen/chadbot";

// Chat service requests from plugins - reuses same logic as web UI

// Request to create or get an existing chat
message ChatGetOrCreateRequest {
  string request_id = 1;
  string platform = 2;     // "whatsapp", "telegram", etc.
  string linked_id = 3;    // External chat ID (e.g., WhatsApp JID)
  string name = 4;         // Chat name
  string user_id = 5;      // Optional user ID
}

message ChatGetOrCreateResponse {
  string request_id = 1;
  bool success = 2;
  string error = 3;
  string chat_id = 4;
  string name = 5;
  bool created = 6;      // True if chat was newly created, false if already existed
}

// Attachment for messages (images, files, etc.)
message Attachment {
  string type = 1;         // "image", "file", etc.
  string mime_type = 2;    // e.g., "image/png"
  bytes data = 3;          // Raw binary data
  string url = 4;          // Alternative: URL to the attachment
  string filename = 5;     // Optional filename
}

// Request to add a message to a chat
message ChatAddMessageRequest {
  string request_id = 1;
  string chat_id = 2;
  string role = 3;         // "user", "assistant", or "plugin"
  string content = 4;
  bool display_only = 5;   // If true, message is shown in UI but not sent to LLM
  repeated Attachment attachments = 6;
}

message ChatAddMessageResponse {
  string request_id = 1;
  bool success = 2;
  string error = 3;
  string message_id = 4;
}

// Request LLM response for a chat (uses chat history)
message ChatLLMRequest {
  string request_id = 1;
  string chat_id = 2;
  string provider = 3;     // Optional: specific LLM provider
}

message ChatLLMResponse {
  string request_id = 1;
  bool success = 2;
  string error = 3;
  string content = 4;      // LLM response content
  string message_id = 5;   // Saved message ID
}

// Get chat history
message ChatGetMessagesRequest {
  string request_id = 1;
  string chat_id = 2;
  int32 limit = 3;         // Optional limit
}

message ChatGetMessagesResponse {
  string request_id = 1;
  bool success = 2;
  string error = 3;
  repeated ChatMessage messages = 4;
}

// Chat message in responses
message ChatMessage {
  string id = 1;
  string chat_id = 2;
  string role = 3;
  string content = 4;
  string created_at = 5;
  bool display_only = 6;
  repeated Attachment attachments = 7;
}
